samples/_failures_safe/1761709487_811592_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e18f649.c: In function ‘main’:
./samples/SAFE/__tmp_9e18f649.c:141:19: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  141 |     matrix_print(&mat
      |                   ^~~
      |                   mat2
./samples/SAFE/__tmp_9e18f649.c:141:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9e18f649.c:141:22: error: expected ‘)’ at end of input
  141 |     matrix_print(&mat
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_9e18f649.c:141:5: error: expected declaration or statement at end of input
  141 |     matrix_print(&mat
      |     ^~~~~~~~~~~~
